(lang dune 3.17)

(name compiler)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Julian Kulesh <julian@example.com>")

(maintainers "Julian Kulesh <julian@example.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name compiler)
 (synopsis "Educational C compiler targeting multiple platforms")
 (description "Educational C compiler targeting multiple platforms")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
